--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                     <a href="{{ link.url | relative_url }}">{{ link.title }}</a>
                 </li>
                 {%- endfor -%}
-                <li><a href="https://www.repaircafe.org/cafe/micro-repair-cafe-delft/" target="_blank">Repair Cafe</a></li>
+                <li><a href="https://www.repaircafe.org/cafe/micro-repair-cafe-delft/" target="_blank">Repair Café</a></li>
                 <li><a href="https://dashboard.repairmonitor.org/" target="_blank">Repair Monitor</a></li>
             </ul>
         </nav>
